// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileLoader /w content 1`] = `
<div
  class="FileLoaderstyles__Wrapper-ymi30o-4 kZTuzU"
>
  <div
    class="FileLoaderstyles__Box-ymi30o-2 eYElVZ"
  >
    <div
      class="FileLoaderstyles__Content-ymi30o-0 igzYZa"
    >
      Перетащите файлы
    </div>
    <input
      accept=""
      class="FileLoaderstyles__InputFile-ymi30o-5 kIScVj"
      multiple=""
      type="file"
      value=""
    />
  </div>
</div>
`;

exports[`FileLoader /w content and subcontent 1`] = `
<div
  class="FileLoaderstyles__Wrapper-ymi30o-4 kZTuzU"
>
  <div
    class="FileLoaderstyles__Box-ymi30o-2 eYElVZ"
  >
    <div
      class="FileLoaderstyles__Content-ymi30o-0 igzYZa"
    >
      Перетащите файлы
    </div>
    <div
      class="FileLoaderstyles__SubContent-ymi30o-1 fMNhrg"
    >
      JPG, GIF, PNG, PDF или ZIP, до 150kb
    </div>
    <input
      accept=""
      class="FileLoaderstyles__InputFile-ymi30o-5 kIScVj"
      multiple=""
      type="file"
      value=""
    />
  </div>
</div>
`;

exports[`FileLoader /w content as ReactNode 1`] = `
<div
  class="FileLoaderstyles__Wrapper-ymi30o-4 kZTuzU"
>
  <div
    class="FileLoaderstyles__Box-ymi30o-2 eYElVZ"
  >
    <div
      class="FileLoaderstyles__Content-ymi30o-0 igzYZa"
    >
      Перетащите файлы сюда или 
      <a
        class="Linkstyles__Box-sc-40rkfc-1 gtrUrS"
      >
        <span
          class="Linkstyles__Wrapper-sc-40rkfc-0 jXPYyj"
        >
          загрузите документы
        </span>
      </a>
    </div>
    <input
      accept=""
      class="FileLoaderstyles__InputFile-ymi30o-5 kIScVj"
      multiple=""
      type="file"
      value=""
    />
  </div>
</div>
`;

exports[`FileLoader /w file 1`] = `
<div
  class="Filestyles__Box-sc-1sbri8o-0 gRRDvd"
>
  <div
    class="Filestyles__Icon-sc-1sbri8o-2 jycNGT"
  >
    <div
      class="Filestyles__Img-sc-1sbri8o-1 ejlgtk"
    >
      doc
    </div>
  </div>
  <div
    class="Filestyles__Main-sc-1sbri8o-3 iiJeMn"
  >
    <div
      class="Filestyles__Info-sc-1sbri8o-7 cvvNqD"
    >
      <div
        class="Filestyles__Name-sc-1sbri8o-4 fSKaNn"
        tabindex="0"
      >
        file 1.doc
      </div>
      <div
        class="Filestyles__Data-sc-1sbri8o-5 jnhkhy"
      />
    </div>
  </div>
  <div
    class="Filestyles__CloseIcon-sc-1sbri8o-6 fjZhUW"
    tabindex="0"
  >
    <svg
      fill="currentColor"
      height="16"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
      />
    </svg>
  </div>
</div>
`;

exports[`FileLoader /w file closable = false 1`] = `
<div
  class="Filestyles__Box-sc-1sbri8o-0 gRRDvd"
>
  <div
    class="Filestyles__Icon-sc-1sbri8o-2 jycNGT"
  >
    <div
      class="Filestyles__Img-sc-1sbri8o-1 ejlgtk"
    >
      doc
    </div>
  </div>
  <div
    class="Filestyles__Main-sc-1sbri8o-3 iiJeMn"
  >
    <div
      class="Filestyles__Info-sc-1sbri8o-7 cvvNqD"
    >
      <div
        class="Filestyles__Name-sc-1sbri8o-4 fSKaNn"
        tabindex="0"
      >
        file 1.doc
      </div>
      <div
        class="Filestyles__Data-sc-1sbri8o-5 jnhkhy"
      />
    </div>
  </div>
</div>
`;

exports[`FileLoader /w file progress 1`] = `
<div
  class="Filestyles__Box-sc-1sbri8o-0 gRRDvd"
>
  <div
    class="Filestyles__Icon-sc-1sbri8o-2 jycNGT"
  >
    <div
      class="Filestyles__Img-sc-1sbri8o-1 ejlgtk"
    >
      doc
    </div>
  </div>
  <div
    class="Filestyles__Main-sc-1sbri8o-3 iiJeMn"
  >
    <div
      class="Filestyles__Info-sc-1sbri8o-7 cvvNqD"
    >
      <div
        class="Filestyles__Name-sc-1sbri8o-4 fSKaNn"
        tabindex="0"
      >
        file 1.doc
      </div>
      <div
        class="Filestyles__Data-sc-1sbri8o-5 jnhkhy"
      >
        Загружено 50%
      </div>
    </div>
    <div
      class="Filestyles__Progress-sc-1sbri8o-8 exFAuN"
    >
      <div
        class="Progressbarstyles__Box-sc-9u8n53-0 ebQjGZ"
      >
        <div
          class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
        />
        <div
          class="Progressbarstyles__Progress-sc-9u8n53-2 jGYoUl"
          color="oslo100"
          width="50"
        />
      </div>
    </div>
  </div>
  <div
    class="Filestyles__CloseIcon-sc-1sbri8o-6 fjZhUW"
    tabindex="0"
  >
    <svg
      fill="currentColor"
      height="16"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
      />
    </svg>
  </div>
</div>
`;

exports[`FileLoader /w with files 1`] = `
<div
  class="FileLoaderstyles__Wrapper-ymi30o-4 kZTuzU"
>
  <div
    class="FileLoaderstyles__Box-ymi30o-2 eYElVZ"
  >
    <div
      class="FileLoaderstyles__Content-ymi30o-0 igzYZa"
    >
      Перетащите файлы
    </div>
    <input
      accept=""
      class="FileLoaderstyles__InputFile-ymi30o-5 kIScVj"
      multiple=""
      type="file"
      value=""
    />
  </div>
  <div
    class="FileLoaderstyles__List-ymi30o-3 lmKLMJ"
  >
    <div
      class="Filestyles__Box-sc-1sbri8o-0 gRRDvd"
    >
      <div
        class="Filestyles__Icon-sc-1sbri8o-2 jycNGT"
      >
        <div
          class="Filestyles__Img-sc-1sbri8o-1 ejlgtk"
        >
          doc
        </div>
      </div>
      <div
        class="Filestyles__Main-sc-1sbri8o-3 iiJeMn"
      >
        <div
          class="Filestyles__Info-sc-1sbri8o-7 cvvNqD"
        >
          <div
            class="Filestyles__Name-sc-1sbri8o-4 fSKaNn"
            tabindex="0"
          >
            file 1.doc
          </div>
          <div
            class="Filestyles__Data-sc-1sbri8o-5 jnhkhy"
          />
        </div>
      </div>
      <div
        class="Filestyles__CloseIcon-sc-1sbri8o-6 fjZhUW"
        tabindex="0"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
          />
        </svg>
      </div>
    </div>
    <div
      class="Filestyles__Box-sc-1sbri8o-0 gRRDvd"
    >
      <div
        class="Filestyles__Icon-sc-1sbri8o-2 jycNGT"
      >
        <div
          class="Filestyles__Img-sc-1sbri8o-1 ejlgtk"
        >
          doc
        </div>
      </div>
      <div
        class="Filestyles__Main-sc-1sbri8o-3 iiJeMn"
      >
        <div
          class="Filestyles__Info-sc-1sbri8o-7 cvvNqD"
        >
          <div
            class="Filestyles__Name-sc-1sbri8o-4 fSKaNn"
            tabindex="0"
          >
            file 1.doc
          </div>
          <div
            class="Filestyles__Data-sc-1sbri8o-5 jnhkhy"
          />
        </div>
      </div>
      <div
        class="Filestyles__CloseIcon-sc-1sbri8o-6 fjZhUW"
        tabindex="0"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
          />
        </svg>
      </div>
    </div>
    <div
      class="Filestyles__Box-sc-1sbri8o-0 gRRDvd"
    >
      <div
        class="Filestyles__Icon-sc-1sbri8o-2 jycNGT"
      >
        <div
          class="Filestyles__Img-sc-1sbri8o-1 ejlgtk"
        >
          doc
        </div>
      </div>
      <div
        class="Filestyles__Main-sc-1sbri8o-3 iiJeMn"
      >
        <div
          class="Filestyles__Info-sc-1sbri8o-7 cvvNqD"
        >
          <div
            class="Filestyles__Name-sc-1sbri8o-4 fSKaNn"
            tabindex="0"
          >
            file 1.doc
          </div>
          <div
            class="Filestyles__Data-sc-1sbri8o-5 jnhkhy"
          />
        </div>
      </div>
      <div
        class="Filestyles__CloseIcon-sc-1sbri8o-6 fjZhUW"
        tabindex="0"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
